tests/ui/feature-gates/feature-gate-decl_macro.rs
#![allow(unused_macros)]

macro m() {} //~ ERROR `macro` is experimental

fn main() {}
